--- a/templates/tintuc.html
+++ b/templates/tintuc.html
@@ -199,7 +199,7 @@
 
     <!-- Menu -->
     <ul class="nav-menu">
-      <li><a href="index.html" class="nav-link">Trang Chủ</a></li>
+      <li><a href="tests/index.html" class="nav-link">Trang Chủ</a></li>
       <li><a href="phong.html" class="nav-link">Phòng</a></li>
       <li><a href="dichvu.html" class="nav-link">Dịch vụ</a></li>
       <li><a href="tintuc.html" class="nav-link active">Tin tức</a></li>
@@ -208,7 +208,7 @@
 
     <!-- Right buttons -->
     <div class="nav-right">
-      <a href="phong.html" class="btn-book">Đặt phòng ngay</a>
+      <a href="templates/phong.html" class="btn-book">Đặt phòng ngay</a>
       <a href="templates/login.html" class="nav-icon">
         <i class="fa-solid fa-user"></i>
       </a>
@@ -637,4 +637,5 @@
 </style>
 
 </body>
+
 </html>
