--- a/templates/tintuc.html
+++ b/templates/tintuc.html
@@ -208,8 +208,8 @@
 
     <!-- Right buttons -->
     <div class="nav-right">
-      <a href="templates/phong.html" class="btn-book">Đặt phòng ngay</a>
-      <a href="templates/login.html" class="nav-icon">
+      <a href="phong.html" class="btn-book">Đặt phòng ngay</a>
+      <a href="login.html" class="nav-icon">
         <i class="fa-solid fa-user"></i>
       </a>
     </div>
@@ -639,3 +639,4 @@
 </body>
 
 </html>
+
