--- a/templates/tintuc.html
+++ b/templates/tintuc.html
@@ -199,7 +199,7 @@
 
     <!-- Menu -->
     <ul class="nav-menu">
-      <li><a href="tests/index.html" class="nav-link">Trang Chủ</a></li>
+      <li><a href="../tests/index.html" class="nav-link">Trang Chủ</a></li>
       <li><a href="phong.html" class="nav-link">Phòng</a></li>
       <li><a href="dichvu.html" class="nav-link">Dịch vụ</a></li>
       <li><a href="tintuc.html" class="nav-link active">Tin tức</a></li>
@@ -639,4 +639,5 @@
 </body>
 
 </html>
+
 
