--- a/templates/phong.html
+++ b/templates/phong.html
@@ -166,10 +166,10 @@
     <!-- Menu -->
     <ul class="nav-menu">
       <li><a href="index.html" class="nav-link">Trang Chủ</a></li>
-      <li><a href="/phong.html" class="nav-link active">Phòng</a></li>
-      <li><a href="/dichvu.html" class="nav-link">Dịch vụ</a></li>
-      <li><a href="/tintuc.html" class="nav-link">Tin tức</a></li>
-      <li><a href="/lienhe.html" class="nav-link">Liên hệ</a></li>
+      <li><a href="phong.html" class="nav-link active">Phòng</a></li>
+      <li><a href="dichvu.html" class="nav-link">Dịch vụ</a></li>
+      <li><a href="tintuc.html" class="nav-link">Tin tức</a></li>
+      <li><a href="lienhe.html" class="nav-link">Liên hệ</a></li>
     </ul>
 
     <!-- Right buttons -->
@@ -582,5 +582,6 @@
 </style>
 </body>
 </html>
+
 
 
