--- a/templates/lienhe.html
+++ b/templates/lienhe.html
@@ -36,10 +36,10 @@
     <!-- Menu -->
     <ul class="nav-menu">
       <li><a href="index.html" class="nav-link">Trang Chủ</a></li>
-      <li><a href="templates/phong.html" class="nav-link">Phòng</a></li>
-      <li><a href="templates/dichvu.html" class="nav-link">Dịch vụ</a></li>
-      <li><a href="templates/tintuc.html" class="nav-link">Tin tức</a></li>
-      <li><a href="templates/lienhe.html" class="nav-link active">Liên hệ</a></li>
+      <li><a href="phong.html" class="nav-link">Phòng</a></li>
+      <li><a href="dichvu.html" class="nav-link">Dịch vụ</a></li>
+      <li><a href="tintuc.html" class="nav-link">Tin tức</a></li>
+      <li><a href="lienhe.html" class="nav-link active">Liên hệ</a></li>
     </ul>
 
     <!-- Right buttons -->
@@ -474,4 +474,5 @@
 </body>
 
 </html>
+
 
