--- a/templates/tintuc.html
+++ b/templates/tintuc.html
@@ -200,10 +200,10 @@
     <!-- Menu -->
     <ul class="nav-menu">
       <li><a href="index.html" class="nav-link">Trang Chủ</a></li>
-      <li><a href="templates/phong.html" class="nav-link">Phòng</a></li>
-      <li><a href="templates/dichvu.html" class="nav-link">Dịch vụ</a></li>
-      <li><a href="templates/tintuc.html" class="nav-link active">Tin tức</a></li>
-      <li><a href="templates/lienhe.html" class="nav-link">Liên hệ</a></li>
+      <li><a href="phong.html" class="nav-link">Phòng</a></li>
+      <li><a href="dichvu.html" class="nav-link">Dịch vụ</a></li>
+      <li><a href="tintuc.html" class="nav-link active">Tin tức</a></li>
+      <li><a href="lienhe.html" class="nav-link">Liên hệ</a></li>
     </ul>
 
     <!-- Right buttons -->
@@ -639,3 +639,4 @@
 </body>
 
 </html>
+
