--- a/templates/lienhe.html
+++ b/templates/lienhe.html
@@ -35,7 +35,7 @@
 
     <!-- Menu -->
     <ul class="nav-menu">
-      <li><a href="index.html" class="nav-link">Trang Chủ</a></li>
+      <li><a href="/index.html" class="nav-link">Trang Chủ</a></li>
       <li><a href="phong.html" class="nav-link">Phòng</a></li>
       <li><a href="dichvu.html" class="nav-link">Dịch vụ</a></li>
       <li><a href="tintuc.html" class="nav-link">Tin tức</a></li>
@@ -474,5 +474,6 @@
 </body>
 
 </html>
+
 
 
