--- a/templates/phong.html
+++ b/templates/phong.html
@@ -165,7 +165,7 @@
 
     <!-- Menu -->
     <ul class="nav-menu">
-      <li><a href="/index.html" class="nav-link">Trang Chủ</a></li>
+      <li><a href="https://n23dcpt017-dot.github.io/bansao-hotel-media-webapp/" class="nav-link">Trang Chủ</a></li>
       <li><a href="phong.html" class="nav-link active">Phòng</a></li>
       <li><a href="dichvu.html" class="nav-link">Dịch vụ</a></li>
       <li><a href="tintuc.html" class="nav-link">Tin tức</a></li>
@@ -582,6 +582,7 @@
 </style>
 </body>
 </html>
+
 
 
 
