--- a/templates/tintuc.html
+++ b/templates/tintuc.html
@@ -199,7 +199,7 @@
 
     <!-- Menu -->
     <ul class="nav-menu">
-      <li><a href="/index.html" class="nav-link">Trang Chủ</a></li>
+      <li><a href="https://n23dcpt017-dot.github.io/bansao-hotel-media-webapp/" class="nav-link">Trang Chủ</a></li>
       <li><a href="phong.html" class="nav-link">Phòng</a></li>
       <li><a href="dichvu.html" class="nav-link">Dịch vụ</a></li>
       <li><a href="tintuc.html" class="nav-link active">Tin tức</a></li>
@@ -639,5 +639,6 @@
 </body>
 
 </html>
+
 
 
