--- a/templates/dichvu.html
+++ b/templates/dichvu.html
@@ -28,7 +28,7 @@
 
     <!-- Menu -->
     <ul class="nav-menu">
-      <li><a href="/main/index.html" class="nav-link">Trang Chủ</a></li>
+      <li><a href="https://n23dcpt017-dot.github.io/bansao-hotel-media-webapp/" class="nav-link">Trang Chủ</a></li>
       <li><a href="phong.html" class="nav-link">Phòng</a></li>
       <li><a href="dichvu.html" class="nav-link active">Dịch vụ</a></li>
       <li><a href="tintuc.html" class="nav-link">Tin tức</a></li>
@@ -529,6 +529,7 @@
 </body>
 
 </html>
+
 
 
 
