--- a/templates/phong.html
+++ b/templates/phong.html
@@ -160,7 +160,7 @@
   <nav class="navbar-container">
     <!-- Logo -->
     <div>
-      <a href="index.html"><img src="images/logo.svg" alt="Logo Grand Hotel" class="logo-image"/></a>
+      <a href="https://n23dcpt017-dot.github.io/bansao-hotel-media-webapp/"><img src="/images/logo.svg" alt="Logo Grand Hotel" class="logo-image"/></a>
     </div>
 
     <!-- Menu -->
@@ -582,6 +582,7 @@
 </style>
 </body>
 </html>
+
 
 
 
