--- a/templates/tintuc.html
+++ b/templates/tintuc.html
@@ -194,7 +194,7 @@
   <nav class="navbar-container">
     <!-- Logo -->
     <div>
-      <a href="index.html"><img src="images/logo.svg" alt="Logo Grand Hotel" class="logo-image"/></a>
+      <a href="https://n23dcpt017-dot.github.io/bansao-hotel-media-webapp/"><img src="https://n23dcpt017-dot.github.io/bansao-hotel-media-webapp/images/logo.svg" alt="Logo Grand Hotel" class="logo-image"/></a>
     </div>
 
     <!-- Menu -->
@@ -639,6 +639,7 @@
 </body>
 
 </html>
+
 
 
 
