--- a/templates/dichvu.html
+++ b/templates/dichvu.html
@@ -37,8 +37,8 @@
 
     <!-- Right buttons -->
     <div class="nav-right">
-      <a href="templates/phong.html" class="btn-book">Đặt phòng ngay</a>
-      <a href="templates/login.html" class="nav-icon">
+      <a href="phong.html" class="btn-book">Đặt phòng ngay</a>
+      <a href="login.html" class="nav-icon">
         <i class="fa-solid fa-user"></i>
       </a>
     </div>
@@ -529,6 +529,7 @@
 </body>
 
 </html>
+
 
 
 
