--- a/templates/phong.html
+++ b/templates/phong.html
@@ -174,8 +174,8 @@
 
     <!-- Right buttons -->
     <div class="nav-right">
-      <a href="templates/phong.html" class="btn-book">Đặt phòng ngay</a>
-      <a href="templates/login.html" class="nav-icon">
+      <a href="phong.html" class="btn-book">Đặt phòng ngay</a>
+      <a href="login.html" class="nav-icon">
         <i class="fa-solid fa-user"></i>
       </a>
     </div>
@@ -582,6 +582,7 @@
 </style>
 </body>
 </html>
+
 
 
 
