Update and rename videohub.html to templates/videohub.html

--- a/templates/videohub.html
+++ b/templates/videohub.html
@@ -23,22 +23,22 @@
   <nav class="navbar-container">
     <!-- Logo -->
     <div>
-      <a href="index.html"><img src="images/logo.svg" alt="Logo Grand Hotel" class="logo-image"/></a>
+      <a href="https://n23dcpt017-dot.github.io/bansao-hotel-media-webapp/"><img src="https://n23dcpt017-dot.github.io/bansao-hotel-media-webapp/images/logo.svg" alt="Logo Grand Hotel" class="logo-image"/></a>
     </div>
 
     <!-- Menu -->
     <ul class="nav-menu">
-      <li><a href="index.html" class="nav-link active">Trang Chủ</a></li>
-      <li><a href="templates/phong.html" class="nav-link">Phòng</a></li>
-      <li><a href="templates/dichvu.html" class="nav-link">Dịch vụ</a></li>
-      <li><a href="templates/tintuc.html" class="nav-link">Tin tức</a></li>
-      <li><a href="templates/lienhe.html" class="nav-link">Liên hệ</a></li>
+      <li><a href="https://n23dcpt017-dot.github.io/bansao-hotel-media-webapp/" class="nav-link active">Trang Chủ</a></li>
+      <li><a href="phong.html" class="nav-link">Phòng</a></li>
+      <li><a href="dichvu.html" class="nav-link">Dịch vụ</a></li>
+      <li><a href="tintuc.html" class="nav-link">Tin tức</a></li>
+      <li><a href="lienhe.html" class="nav-link">Liên hệ</a></li>
     </ul>
 
     <!-- Right buttons -->
     <div class="nav-right">
-      <a href="templates/phong.html" class="btn-book">Đặt phòng ngay</a>
-      <a href="templates/login.html" class="nav-icon">
+      <a href="phong.html" class="btn-book">Đặt phòng ngay</a>
+      <a href="login.html" class="nav-icon">
         <i class="fa-solid fa-user"></i>
       </a>
     </div>
@@ -482,4 +482,5 @@
 </style>
 </body>
 </html>
+
 
